Designed the explore page, hostel infomation page, roommate info page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   skeletonizer:
   flutter_lazy_listview:
   fluttertoast:
+  flutter_rating_stars:
 
 dev_dependencies:
   flutter_test:
@@ -85,12 +86,12 @@ flutter:
         - asset: assets/fonts/WorkSans-Thin.ttf
     - family: Inter
       fonts:
-        - asset: fonts/Inter-Black.ttf
-        - asset: fonts/Inter-Bold.ttf
-        - asset: fonts/Inter-ExtraBold.ttf
-        - asset: fonts/Inter-Light.ttf
-        - asset: fonts/Inter-ExtraLight.ttf
-        - asset: fonts/Inter-Medium.ttf
-        - asset: fonts/Inter-Regular.ttf
-        - asset: fonts/Inter-SemiBold.ttf
-        - asset: fonts/Inter-Thin.ttf
+        - asset: assets/fonts/Inter-Black.ttf
+        - asset: assets/fonts/Inter-Bold.ttf
+        - asset: assets/fonts/Inter-ExtraBold.ttf
+        - asset: assets/fonts/Inter-Light.ttf
+        - asset: assets/fonts/Inter-ExtraLight.ttf
+        - asset: assets/fonts/Inter-Medium.ttf
+        - asset: assets/fonts/Inter-Regular.ttf
+        - asset: assets/fonts/Inter-SemiBold.ttf
+        - asset: assets/fonts/Inter-Thin.ttf
