--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_lazy_listview:
   fluttertoast:
   flutter_rating_stars:
+  flutter_neumorphic:
 
 dev_dependencies:
   flutter_test:
