Finished th reset functionality in the explore filters, created the upload hostel progress page, added the signalR dependcy for messaging

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   photo_view:
   animated_text_kit:
   get_thumbnail_video:
+  signalr_flutter:
+
+
 
 dev_dependencies:
   flutter_test:
