--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <application
+        android:usesCleartextTraffic="true"
         android:label="Fynda"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
