--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -5,4 +5,4 @@ android.enableJetifier=true
 RELEASE_STORE_PASSWORD=Tinalexman
 RELEASE_KEY_PASSWORD=Tinalexman
 RELEASE_KEY_ALIAS=key0
-RELEASE_STORE_FILE=C\:\\Users\\OLUWATOBILOBA\\Keystores\\Fynda\\fynda-keystore.jks
+RELEASE_STORE_FILE=C\:\\Users\\Oluwatobiloba\\Keystores\\Fynda\\fynda-keystore.jks
